--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "joonkim-blog",
   "version": "1.0.0",
+  "private": true,
   "description": "this is to create my own blog!",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "author": "Joon Kim",
   "license": "ISC",
@@ -21,5 +23,9 @@
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.10",
     "sequelize-cli": "^5.5.1"
+  },
+  "engines": {
+    "node": "0.8.x",
+    "npm": "1.1.x"
   }
 }
