--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "joonkim-blog",
   "version": "1.0.0",
   "private": true,
-  "description": "this is to create my own blog!",
+  "description": "Node.js, Postgres, Sequelize application",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "node server.js"
   },
   "author": "Joon Kim",
   "license": "ISC",
@@ -25,7 +25,7 @@
     "sequelize-cli": "^5.5.1"
   },
   "engines": {
-    "node": "0.8.x",
+    "node": "10.x",
     "npm": "1.1.x"
   }
 }
