--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Joon Kim",
   "license": "ISC",
   "dependencies": {
+    "@babel/helpers": "^7.10.4",
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
