--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
+  "keywords": [
+    "Node.js",
+    "Heroku",
+    "deployment"
+  ],
   "author": "Joon Kim",
   "license": "ISC",
   "dependencies": {
