--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
-jwtSecret = "dkssud1gktpdy2rlaguswns3dlqslek4"
+jwtSecret="dkssud1gktpdy2rlaguswns3dlqslek4"
 
-PORT = 8081
+DB_HOST=localhost
+DB_USER=postgres
+DB_NAME=blog
+DB_PORT=8080
