--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,15 @@
-
-
-.env
+# node_modules both applications
 node_modules
-
+# production
+build
+dist
+# misc
+.DS_Store
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
